# WinterIsComing

./: .gitignore  README.md  notes
compiler/: CMakeLists.txt  Makefile  wic
compiler/src/: Main.cpp  Makefile  code.s  ensamblador.s  lex.yy.c  main.cpp  prueba.py  test.wic  wic  wic.l  wic.output  wic.tab.c  wic.tab.h  wic.y
compiler/src/ast/: ASTLeafNode.cpp  ASTLeafNode.hpp  ASTNode.cpp  ASTNode.hpp  ASTOperatorNode.cpp  ASTOperatorNode.hpp  ASTPack.hpp  ASTSymbolTableNode.cpp  ASTSymbolTableNode.hpp  AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  AbstractSyntaxTreePack.hpp
compiler/src/ast/node/: ASTNode.cpp  ASTNode.hpp
compiler/src/ast/nodes/: ASTLeafNode.cpp  ASTLeafNode.hpp  ASTNode.cpp  ASTNode.hpp  ASTOperatorNode.cpp  ASTOperatorNode.hpp  ASTSymbolTableNode.cpp  (+1 more)
compiler/src/code-generator/: CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorPack.hpp
compiler/src/descenso-recursivo/: Gramática_Descenso_Recursivo.xlsx  Makefile  NuestroLexicoNOTOCAR  README.txt  a.out  descenso_recursivo.l  descenso_recursivo.y  descenso_recursivo.y.txt  descenso_recursivo_metodos_simbolos_no_terminales.txt  gramatica_descenso_recursivo.txt  lex.yy.c  main_guia_no_TOCAR
compiler/src/error-manager/: ErrorManager.cpp  ErrorManagerPack.hpp
compiler/src/flex-bison/: wic.l  wic.y
compiler/src/recursive-descent/: main.cpp
compiler/src/symbol-table/: SymbolTable.cpp  SymbolTable.hpp  SymbolTableManager.c  SymbolTableManager.h  SymbolTablePack.hpp  symbol.hpp  wic.table.cpp  wic.table.hpp
compiler/test/: fibo.wic  fun-test.wic  if-test.wic  test_simple.wic
(+83 files in other folders)
